--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,4 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
 
       - name: Test
-          go test ./...
+          run go test ./...
