--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Let's Buikd and Deploy Go with Docker
+name: Let's Build and Deploy Go with Docker
 
 on:
   push:
@@ -26,5 +26,5 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
 
-      - name: Test
-        run: go test ./...
+      # - name: Test
+      #   run: go test ./...
