--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,13 @@ name: Let's Build and Deploy Go with Docker
 
 
 on:
-  workflow_dispatch: 
-
+ workflow_dispatch:
+    inputs:
+       
+      dockerimage-name:
+          description: 'Docker Image Name '
+          required: true
+          type: string
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,6 +28,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/godocker:latest
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{dockerimage-name}}:latest
 
      
