--- a/.github/workflows/pull_and_run.yml
+++ b/.github/workflows/pull_and_run.yml
@@ -23,7 +23,7 @@ jobs:
               
       - name: Run Docker Image 
         run: |
-              docker run -p 8080:8080  -d ${{inputs.docker-image}}
+              docker run  -d ${{inputs.docker-image}}
         
         
 
