--- a/.github/workflows/gobuildwithmatrix.yml
+++ b/.github/workflows/gobuildwithmatrix.yml
@@ -15,7 +15,7 @@ jobs:
       matrix:
         os: [ ubuntu-20.04]
         image_tag: [1.0, 2.0]
-     runs-on: ${{ matrix.os }}]
+     runs-on: ${{ matrix.os }}
        
 
      steps:
