--- a/.github/workflows/gobuildwithmatrix.yml
+++ b/.github/workflows/gobuildwithmatrix.yml
@@ -13,8 +13,8 @@ jobs:
  build:
      strategy:
       matrix:
-        os: [ ubuntu-20.04]
-        image_tag: [1.0, 2.0]
+        os: [ ubuntu-20.04 , ubuntu-18.04]
+        image_tag: [1.0.1 , 2.0.1, 3.0.1 ]
      runs-on: ${{ matrix.os }}
        
 
