--- a/.github/workflows/gobuildwithmatrix.yml
+++ b/.github/workflows/gobuildwithmatrix.yml
@@ -14,7 +14,8 @@ jobs:
      strategy:
       matrix:
         os: [ ubuntu-20.04 , ubuntu-18.04]
-        image_tag: [1.0.1 , 2.0.1, 3.0.1 ]
+        # image_tag: [1.0.1 , 2.0.1, 3.0.1 ]
+        go-version: [1.15, 1.16]
      runs-on: ${{ matrix.os }}
        
 
@@ -34,7 +35,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{inputs.dockerimage-name}}:${{matrix.image_tag}}
+          build-args: ${{matirx.go-version}}
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{inputs.dockerimage-name}}:latest
 
 
      
