--- a/.github/workflows/gobuildwithmatrix.yml
+++ b/.github/workflows/gobuildwithmatrix.yml
@@ -22,6 +22,9 @@ jobs:
      steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2  
+        
       - name: Login to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -35,7 +38,7 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          build-args: ${{matrix.go-version}}
+          build-args: GO_VERSION = ${{matrix.go-version}}
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{inputs.dockerimage-name}}:latest
 
 
