--- a/.github/workflows/newmatrix.yml
+++ b/.github/workflows/newmatrix.yml
@@ -24,12 +24,13 @@ jobs:
   - uses: mr-smithers-excellent/docker-build-push@v5
     name: Build & push Docker image
     with:
-      image: repo/image
-      tags: v1, latest
-  
+      registry: docker.io
+      image: ${{ secrets.DOCKER_USERNAME }}/${{inputs.dockerimage-name}}
       dockerfile: ./Dockerfile
       username: ${{ secrets.DOCKER_USERNAME }}
       password: ${{ secrets.DOCKER_PASSWORD }}
+      tags: latest 
+      buildArgs: GO_VERSION = "1.16"
 
 
 
