--- a/.github/workflows/gobuildwithmatrix.yml
+++ b/.github/workflows/gobuildwithmatrix.yml
@@ -35,7 +35,8 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          build-args: "GO_VERSION = 1.16"
+          build-args: |
+            GO_VERSION=1.16
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/${{inputs.dockerimage-name}}:latest
 
 
