--- a/.github/workflows/gobuildwithmatrix.yml
+++ b/.github/workflows/gobuildwithmatrix.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         os: [ ubuntu-20.04 , ubuntu-18.04]
         # image_tag: [1.0.1 , 2.0.1, 3.0.1 ]
-        go-version: [1.15, 1.16]
+        go-version: [1.15, 1.16, 1.17]
      runs-on: ${{ matrix.os }}
        
 
